Fixing header text alignment

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -14,7 +14,7 @@
     display: block;
     color: var(--color-branding-text);
     text-align: center;
-    padding: 1.2rem 1.2rem 1rem 1.2rem;
+    padding: 1.2rem 1.2rem 1rem 1rem;
     text-decoration: none;
     text-transform: capitalize;
     line-height: 1.2rem;
